--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hello World!</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello World!</h1>
