--- a/index.html
+++ b/index.html
@@ -1,17 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Hello World!</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="style.css">
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-inline';"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="grid-container">
+      <div class="brand">
+        <img src="images/koinos-logo.svg" alt="" />
+      </div>
+      <div>v0.80</div>
+      <div class="eth-start">
+        <input type="text" />
+        <button>START</button>
+      </div>
+      <div class="tip">
+        <span>Dev Tip</span>
+        <label>
+          <input type="checkbox" class="check-custom toggle-switch" />
+          <span class="check-toggle"></span>
+        </label>
+      </div>
+      <div class="koin-mined">
+        <div>
+          <div class="km-text">1,288,234</div>
+          <span class="km-text-label">KOIN</span>
+        </div>
+      </div>
+      <div class="hashrate">
+        <div class="hashrate-text">
+          <div class="hashrate-current">99.3</div>
+          <span>Mh/s</span>
+        </div>
+        <img src="images/glow-circle.svg" alt="" />
+      </div>
+    </div>
+    <!-- <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    and Electron <script>document.write(process.versions.electron)</script>. -->
   </body>
 </html>
-
