add more styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
       <span class="version">v0.01</span>
 
       <div class="eth-start">
-        <input type="text" placeholder="ETH address" /><button>
+        <input
+          type="text"
+          placeholder="ETH address"
+          class="tooltip-bottom"
+          data-tooltip="I’m the tooltip text."
+        /><button>
           <img src="assets/images/power_24px.svg" alt="" />
         </button>
       </div>
