--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
       <div class="eth-start">
         <input
+          id="ethAddress"
           type="text"
           placeholder="ETH address"
           class="tooltip-bottom"
           data-tooltip="I’m the tooltip text."
-        /><button>
+        /><button onClick="toggleMiner();">
           <img src="assets/images/power_24px.svg" alt="" />
         </button>
       </div>
@@ -34,6 +35,7 @@
         <span>Dev Tip</span
         ><label
           ><input
+            id="tip"
             type="checkbox"
             class="check-custom toggle-switch"
             checked
@@ -50,14 +52,15 @@
       </div>
       <div class="hashrate">
         <div class="hashrate-text">
-          <div class="hashrate-current">99.3</div>
-          <span>Mh/s</span>
+          <div id="hashrate-current" class="hashrate-current">0.0</div>
+          <span id="hashrate-suffix"></span>
         </div>
         <img src="assets/images/glow-circle.svg" alt="" />
       </div>
     </div>
     <script src="assets/js/d3.min.js"></script>
     <script src="assets/js/graph.js"></script>
+    <script src="script.js"></script>
 
     <div class="info">
       Node:
@@ -76,3 +79,4 @@
     </div>
   </body>
 </html>
+
