--- a/index.html
+++ b/index.html
@@ -1,82 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Koinos Miner!</title>
-    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-    <link rel="stylesheet" href="assets/css/normalize.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <style>
-      #chart {
-        text-align: center;
-        margin-top: 40px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="grid-container">
-      <div class="brand">
-        <img src="assets/images/koinos-logo.svg" alt="" />
-      </div>
-      <span class="version">v0.01</span>
 
-      <div class="eth-start">
-        <input
-          id="ethAddress"
-          type="text"
-          placeholder="ETH address"
-          class="tooltip-bottom"
-          data-tooltip="I’m the tooltip text."
-        /><button onClick="toggleMiner();">
-          <img src="assets/images/power_24px.svg" alt="" />
-        </button>
-      </div>
-      <div class="tip">
-        <span>Dev Tip</span
-        ><label
-          ><input
-            id="tip"
-            type="checkbox"
-            class="check-custom toggle-switch"
-            checked
-          /><span class="check-toggle"></span>
-        </label>
-        <div class="thank-you">OpenOrchard thanks you!</div>
-      </div>
-      <div class="koin-mined">
-        <div>
-          <div class="km-text">1,288,234</div>
-          <span class="km-text-label">KOIN</span>
-        </div>
-        <div id="chart"></div>
-      </div>
-      <div class="hashrate">
-        <div class="hashrate-text">
-          <div id="hashrate-current" class="hashrate-current">0.0</div>
-          <span id="hashrate-suffix"></span>
-        </div>
-        <img src="assets/images/glow-circle.svg" alt="" />
-      </div>
-    </div>
-    <script src="assets/js/d3.min.js"></script>
-    <script src="assets/js/graph.js"></script>
-    <script src="script.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <title>Koinos Miner!</title>
+  <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
+  <link rel="stylesheet" href="assets/css/normalize.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <style>
+    #chart {
+      text-align: center;
+      margin-top: 40px;
+    }
+  </style>
+</head>
 
-    <div class="info">
-      Node:
-      <script>
-        document.write(process.versions.node)
-      </script>
-      , Chrome:
-      <script>
-        document.write(process.versions.chrome)
-      </script>
-      , Electron:
-      <script>
-        document.write(process.versions.electron)
-      </script>
-      .
+<body>
+  <div class="grid-container">
+    <div class="brand">
+      <img src="assets/images/koinos-logo.svg" alt="" />
     </div>
-  </body>
+    <span class="version">v0.01</span>
+
+    <div class="eth-start">
+      <input id="ethAddress" type="text" placeholder="ETH address"
+        value="0x26F632333F8346877f58B200f98346F3Db67B506" /><button onClick="toggleMiner();" id="power-button"
+        class="redBorder">
+        <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path id="svg-button" class="red"
+            d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z" />
+        </svg>
+      </button>
+    </div>
+    <div class="tip">
+      <span>Dev Tip</span><label><input id="tip" type="checkbox" class="check-custom toggle-switch disabled"
+          checked /><span class="check-toggle"></span>
+      </label>
+      <div class="thank-you">OpenOrchard thanks you!</div>
+    </div>
+    <div class="koin-mined">
+      <div>
+        <div class="km-text">1,288,234</div>
+        <span class="km-text-label">KOIN</span>
+      </div>
+      <div id="chart"></div>
+    </div>
+    <div class="hashrate">
+      <div class="hashrate-text">
+        <div id="hashrate-current" class="hashrate-current">0.0</div>
+        <span id="hashrate-suffix"></span>
+      </div>
+      <img src="assets/images/glow-circle.svg" alt="" />
+    </div>
+  </div>
+  <script src="assets/js/d3.min.js"></script>
+  <script src="assets/js/graph.js"></script>
+  <script src="script.js"></script>
+
+  <div class="info">
+    Node:
+    <script>
+      document.write(process.versions.node)
+    </script>
+    , Chrome:
+    <script>
+      document.write(process.versions.chrome)
+    </script>
+    , Electron:
+    <script>
+      document.write(process.versions.electron)
+    </script>
+    .
+  </div>
+</body>
+
 </html>
-
