--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="tip">
       <span>Dev Tip</span><label><input id="tip" type="checkbox" class="check-custom toggle-switch disabled"
-          checked /><span class="check-toggle"></span>
+          checked /><span id="check-toggle" class="check-toggle"></span>
       </label>
       <div class="thank-you">OpenOrchard thanks you!</div>
     </div>
