#5: Added KOIN balance updates

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="koin-mined">
       <div>
-        <div class="km-text">1,288,234</div>
+        <div id="koin-balance" class="km-text">0</div>
         <span class="km-text-label">KOIN</span>
       </div>
       <div id="chart"></div>
@@ -76,3 +76,4 @@
 </body>
 
 </html>
+
