--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="eth-start">
       <input id="ethAddress" type="text" placeholder="ETH address"
         value="0x26F632333F8346877f58B200f98346F3Db67B506" /><button onClick="toggleMiner();" id="power-button"
-        class="redBorder" onblur="albert()">
+        class="redBorder" onblur="">
         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 0h24v24H0z" fill="none" />
           <path id="svg-button" class="red"
