--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="hashrate">
       <img src="assets/images/glow-circle.svg" alt="" class="circle" />
       <div class="blob"></div>
-      <div class="spinner">
+      <div id="hashrate-spinner" style="display: none;" class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
         <div class="bounce3"></div>
