add day/week checkbox styling

--- a/index.html
+++ b/index.html
@@ -25,14 +25,7 @@
       <span>Proof Period</span>
       <div>
         <input type="text" value="value">
-        <label class="pp-select">Day
-          <input type="checkbox">
-          <span class="checkmark"></span>
-        </label>
-        <label class="pp-select">Week
-          <input type="checkbox">
-          <span class="checkmark"></span>
-        </label>
+        <span id="checkDay" class="checked">Day</span><span id="checkWeek" class="">Week</span>
       </div>
     </div>
     <div>
@@ -119,6 +112,9 @@
   <script src="assets/js/d3.min.js"></script>
   <script src="assets/js/graph.js"></script>
   <script src="script.js"></script>
+  <script>
+
+  </script>
 
 
 </body>
