#28, #29: Added support to input ethereum node address and proof period information

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="proof-period">
       <span>Proof Frequency</span>
       <div>
-        <input id="proof-period" type="text" value="">
+        <input id="proof-frequency" type="text" value="">
       </div>
     </div>
     <div class="periods">
       <div class="per">Per</div>
       <div>
-        <span id="checkDay" class="toggle checked" onclick="toggleProofPeriod('day')">Day</span><span id="checkWeek"
+        <span id="check-day" class="toggle checked" onclick="toggleProofPeriod('day')">Day</span><span id="check-week"
           class="toggle" onclick="toggleProofPeriod('week')">Week</span>
       </div>
     </div>
@@ -59,7 +59,7 @@
     </div>
     <div class="eth-start">
       <span class="key-managment" onclick="manageKeys()">Keys</span>
-      <input id="ethAddress" type="text" placeholder="ETH address"
+      <input id="eth-address" type="text" placeholder="ETH address"
         value="0x26F632333F8346877f58B200f98346F3Db67B506" /><button onClick="toggleMiner();" id="power-button"
         class="redBorder" onblur="">
         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
