--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
   <div class="config">
-    <div>
+    <div class="no-drag">
       <span>Ethereum Endpoint</span>
       <div><input id="eth-endpoint" type="text" value=""></div>
     </div>
-    <div class="proof-period">
+    <div class="proof-period no-drag">
       <span>Proof Frequency</span>
       <div>
         <input id="proof-period" type="text" value="">
@@ -42,6 +42,9 @@
       </div>
     </div>
     <div>
+      <div class="key-managment" onclick="manageKeys()">Keys</div>
+    </div>
+    <div>
       <div class="tip">
         <span>Dev Tip (5%)</span>
         <label>
@@ -58,7 +61,6 @@
       <img src="assets/images/koinos-logo.svg" alt="" />
     </div>
     <div class="eth-start">
-      <span class="key-managment" onclick="manageKeys()">Keys</span>
       <input id="ethAddress" type="text" placeholder="ETH address"
         value="0x26F632333F8346877f58B200f98346F3Db67B506" /><button onClick="toggleMiner();" id="power-button"
         class="redBorder" onblur="">
@@ -109,8 +111,7 @@
       .
     </div>
     <span class="version">
-      <a href="https://koinos.io" target="_blank"><img src="assets/images/open_in_new-24px.svg" alt="" class="icon">
-        Documentation</a>
+      <span onclick="openDocs()">Documentation</span>
       v0.01
     </span>
     <div class="errors">
@@ -123,6 +124,12 @@
   <script src="assets/js/d3.min.js"></script>
   <script src="assets/js/graph.js"></script>
   <script src="script.js"></script>
+  <script>
+    function openDocs() {
+      const opener = require("opener");
+      opener("http://google.com");
+    }
+  </script>
 
 </body>
 
