Added functionality to the generate keys window

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div>
-      <div id="key-managment" onclick="launchWindow()"><img src="./assets/images/key.svg" alt=""> Key</div>
+      <div id="key-managment" onclick="onKeyManagementClick()"><img src="./assets/images/key.svg" alt=""> Key</div>
     </div>
     <div>
       <div class="tip">
