Added password prompt when starting to mine

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <header id="titlebar">
-    Miner v 0.10
+    <!--Koinos Miner v0.1.0-->
   </header>
   <div class="config">
     <div class="no-drag">
