Add warning handlers to the GUI

--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
         <div id="github-link">GitHub Issues</div>
       </div>
     </div>
+    <div id="warnings" class="warnings flicker-in" style="display:none;">
+      <div id="warning-close">
+        Close
+      </div>
+      <div id="warning-message" class="warning-message">
+      </div>
+      <div id="warning-github-icon">
+        <img src="assets/images/github.svg" alt="">
+        <div id="warning-github-link">GitHub Issues</div>
+      </div>
+    </div>
   </div>
   <script src="assets/js/d3.min.js"></script>
   <script src="assets/js/graph.js"></script>
