--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
       color: #6F00F6;
       font-size: .7em;
     }
+    #overlay {
+      position: fixed;
+      display: none;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.9);
+      z-index: 2;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center; 
+      text-align: center;
+    }
+    #cancel-countdown {
+      position: absolute;
+      bottom: 40px;
+      text-decoration: underline;
+    }
   </style>
 </head>
 
@@ -67,13 +89,13 @@
             class="check-toggle">
           </span>
         </label>
-        <div class="thank-you">OpenOrchard thanks you!</div>
+        <div class="thank-you"> <a href="https://openorchard.io">OpenOrchard</a> thanks you!</div>
       </div>
     </div>
   </div>
   <div class="top-grid">
     <div class="brand">
-      <img src="assets/images/koinos-logo.svg" alt="" />
+      <img src="assets/images/koinos-logo.svg" alt="" onclick="on()"/>
     </div>
     <div class="eth-start">
       <input id="eth-address" type="text" placeholder="ETH Address"
@@ -151,9 +173,24 @@
       </div>
     </div>
   </div>
+  <div id="overlay" onclick="off()">
+    <div>
+      <p>Mining will automatically begin in</p>
+      <h2>2 hours, 26 minutes, and 46 seconds</h2>
+      <span id="cancel-countdown" >Cancel</span>
+    </div>
+  </div>
   <script src="assets/js/d3.min.js"></script>
   <script src="assets/js/graph.js"></script>
   <script src="script.js"></script>
+  <script>
+    function on () {
+      document.getElementById("overlay").style.display = "block";
+    }
+    function off () {
+      document.getElementById("overlay").style.display = "none";
+    }
+  </script>
 
 </body>
 
