--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
   <div class="top-grid">
     <div class="brand">
-      <img src="assets/images/koinos-logo.svg" alt="" onclick="on()"/>
+      <img src="assets/images/koinos-logo.svg" alt=""/>
     </div>
     <div class="eth-start">
       <input id="eth-address" type="text" placeholder="ETH Address"
@@ -183,21 +183,13 @@
   <div id="overlay">
     <div id="countdown-area">
       <p>Mining will automatically begin in</p>
-      <h2>2 hours, 26 minutes, and 46 seconds</h2>
-      <span id="cancel-countdown" onclick="off()">Cancel</span>
+      <h2 id="countdown">...</h2>
+      <span id="cancel-countdown" onclick="overlayCancel()">Cancel</span>
     </div>
   </div>
   <script src="assets/js/d3.min.js"></script>
   <script src="assets/js/graph.js"></script>
   <script src="script.js"></script>
-  <script>
-    function on () {
-      document.getElementById("overlay").style.display = "block";
-    }
-    function off () {
-      document.getElementById("overlay").style.display = "none";
-    }
-  </script>
 </body>
 
 </html>
