Only have the circle glow when the miner is activated

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <div class="hashrate">
       <img src="assets/images/glow-circle.svg" alt="" class="circle" />
-      <div class="blob"></div>
+      <div id="circle-glow" class=""></div>
       <div id="hashrate-spinner" style="display: none;" class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
