#67: Add application links where necessary, general cleanup

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       text-decoration: underline;
       text-align: center;
     }
+    #company,#logo {
+      cursor: pointer;
+    }
   </style>
 </head>
 
@@ -96,13 +99,13 @@
             class="check-toggle">
           </span>
         </label>
-        <div class="thank-you">OpenOrchard thanks you!</div>
+        <div id="company" class="thank-you">OpenOrchard thanks you!</div>
       </div>
     </div>
   </div>
   <div class="top-grid">
     <div class="brand">
-      <img src="assets/images/koinos-logo.svg" alt=""/>
+      <img id="logo" src="assets/images/koinos-logo.svg" alt=""/>
     </div>
     <div class="eth-start">
       <input id="eth-address" type="text" placeholder="ETH Address"
@@ -155,7 +158,7 @@
       .
     </div>
     <span class="version">
-      <span id="documentation-link" onclick="launchModal()">Documentation</span>
+      <span id="documentation-link">Documentation</span>
     </span>
     <div id="errors" class="errors flicker-in" style="display:none;">
       <div id="error-close">
