Clean up error messages and version information

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             class="check-toggle">
           </span>
         </label>
-        <div id="company" class="thank-you">OpenOrchard thanks you!</div>
+        <div id="company" class="thank-you">Visit OpenOrchard.io »</div>
       </div>
     </div>
   </div>
@@ -146,16 +146,13 @@
       Node:
       <script>
         document.write(process.versions.node)
-      </script>
-      , Chrome:
+      </script>, Chrome:
       <script>
         document.write(process.versions.chrome)
-      </script>
-      , Electron:
+      </script>, Electron:
       <script>
         document.write(process.versions.electron)
-      </script>
-      .
+      </script>.
     </div>
     <span class="version">
       <span id="documentation-link">Documentation</span>
