Added Koinos Miner version to the bottom left

--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
       </div>
     </div>
     <div class="info">
-      Node:
+      Koinos Miner:
+      <script>
+        document.write(process.env.npm_package_version)
+      </script>, Node:
       <script>
         document.write(process.versions.node)
       </script>, Chrome:
