Adds a cool fadeIn and fadeOut animation to the coutndown overlay

--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
   <link rel="stylesheet" href="assets/css/normalize.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <style>
+    .fade-in {
+      animation: fadeIn ease 1s;
+    }
+
+    .fade-out {
+      animation: fadeOut ease 1s;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+
+      100% {
+        opacity: 1;
+      }
+    }
+
+    @keyframes fadeOut {
+      0% {
+        opacity: 1;
+      }
+
+      100% {
+        opacity: 0;
+      }
+    }
+
     #chart {
       text-align: center;
       margin-top: 40px;
