Add version information to the UI

--- a/index.html
+++ b/index.html
@@ -170,21 +170,7 @@
         <span id="hashrate-suffix"></span>
       </div>
     </div>
-    <div class="info">
-      Koinos Miner:
-      <script>
-        document.write(process.env.npm_package_version)
-      </script>, Node:
-      <script>
-        document.write(process.versions.node)
-      </script>, Chrome:
-      <script>
-        document.write(process.versions.chrome)
-      </script>, Electron:
-      <script>
-        document.write(process.versions.electron)
-      </script>.
-    </div>
+    <div id="version-info" class="info"></div>
     <span class="version">
       <span id="documentation-link">Documentation</span>
     </span>
