--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <img id="logo" src="assets/images/koinos-logo.svg" alt=""/>
     </div>
     <div class="eth-start">
-      <input id="eth-address" type="text" placeholder="ETH Address"
+      <input id="eth-address" type="text" placeholder="Recipient Address"
         value="0x26F632333F8346877f58B200f98346F3Db67B506" /><button onClick="toggleMiner();" id="power-button"
         class="redBorder" onblur="">
         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
