add version number next to logo

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
   <div class="top-grid">
     <div class="brand">
       <img id="logo" src="assets/images/koinos-logo.svg" alt=""/>
+      <span id="miner-version"></span>
     </div>
     <div class="eth-start">
       <input id="eth-address" type="text" placeholder="Recipient Address"
